examples/indivisiblePowerError.unit
var k :: [m^2 s^4]

expr k^(1/2) // ok

expr (k^2)^(1/4) // ok

expr k^(1/3) // error

